cluster/apps/games/valheim/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valheim-server
spec:
  selector:
    matchLabels:
      app: valheim-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: valheim-server
    spec:
      containers:
        - image: "lloesche/valheim-server:latest"
          name: valheim-server
          ports:
            - containerPort: 2456
              name: gameport
            - containerPort: 2457
              name: queryport
          volumeMounts:
            - mountPath: /config
              name: gamefiles
            - mountPath: /opt/valheim
              name: serverfiles
            - mountPath: /backups
              name: valheim-backups


          resources:
            {}
      volumes:
        - name: gamefiles
          persistentVolumeClaim:
            claimName: valheim-server-world-data
        - name: serverfiles
          persistentVolumeClaim:
            claimName: valheim-server-base-data
        - name: valheim-backups
          persistentVolumeClaim:
            claimName: valheim-backups
